--- a/.github/workflows/update_docs.yml
+++ b/.github/workflows/update_docs.yml
@@ -20,15 +20,11 @@ jobs:
 
       - name: Install dependencies
         run: |
-          pip install mkdocs-material
+          pip install mkdocs-material==9.2.8
 
       - name: Build documentation
         run: |
           mkdocs build
-
-      - name: Move documentation to site folder
-        run: |
-          cp -r site/* .
 
       - name: Deploy to server
         env:
