--- a/.github/workflows/update_docs.yml
+++ b/.github/workflows/update_docs.yml
@@ -37,3 +37,4 @@ jobs:
         run: |
           git config --global user.email "327209194@qq.com"
           git config --global user.name "Ikaros-521"
+          mkdocs gh-deploy --force
