--- a/.github/workflows/update_docs.yml
+++ b/.github/workflows/update_docs.yml
@@ -39,5 +39,5 @@ jobs:
       - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v3
         with:
-          deploy_key: ${{ secrets.GH_TOKEN }}
+          deploy_key: ${{ secrets.GH_PAGES_DEPLOY_KEY }}
           publish_dir: ./site  # 指定要部署的目录
