更新：文档结构

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -22,6 +22,10 @@ theme:
   features:
     - navigation.instant
     - content.tabs.link
+    - navigation.tabs
+    - navigation.tabs.sticky
+    - navigation.sections
+    - navigation.expand
   palette:
     scheme: default
     primary: blue
@@ -31,4 +35,24 @@ extra:
     provider: google
     property: G-FR32RDV2MT
 copyright: >
-  Copyright &copy; 2023 <a href="//ie.cx">𝑖𝑞𝑏𝑜𝑜𝑠𝑡</a> & Ikaros-521
+  Copyright &copy; 2025 <a href="https://github.com/Ikaros-521/AI-Vtuber">AI-Vtuber</a> & Ikaros-521
+nav:
+  - 首页: index.md
+  - 安装: install.md
+  - 使用: use.md
+  - 功能介绍:
+    - 基础功能: features/basic.md
+    - API接口: features/api.md
+    - 平台: features/platform.md
+    - 大语言模型: features/llm.md
+    - 语音合成: features/tts.md
+    - 变声: features/svc.md
+    - 虚拟身体: features/visual_body.md
+    - 其他: features/other.md
+  - 常见问题: faq.md
+  - 开发&项目相关: develop.md
+  - 开发计划:
+    - 待办列表: plans/todo.md
+    - 长期规划: plans/long-term.md
+  - 更新日志: changelog.md
+  - 关于: about.md
